enabled virtual thread processing, scaling from a fixed thread pool to around 16k threads (capped by TCP ports)